# pbar

./: README.md  pyproject.toml
src/pbar/: __init__.py  _pbar.py  _pbar_gather.py  test_pbar.py
