[project]
name = "pbar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rubens", email = "38709237+andrader@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "rich>=14.2.0",
]

[project.scripts]
pbar = "pbar:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]
